--- a/bankist-2/style.css
+++ b/bankist-2/style.css
@@ -440,7 +440,8 @@ h4 {
 
 .dots__dot {
   border: none;
-  background-color: #b9b9b9;
+  background-color: red;
+  /* background-color: #b9b9b9; */
   opacity: 0.7;
   height: 1rem;
   width: 1rem;
